# infrabase

./: .buildinfo  .gitignore  Dockerfile  README.md  build.sh  coding_conventions.html  deploy.sh  dev_flow.html  env.sh  genindex.html  glossary.html  index.html  introduction.html  objects.inv  search.html  searchindex.js  st  stg  stv  user_guide.html
.doctrees/: coding_conventions.doctree  dev_flow.doctree  environment.pickle  glossary.doctree  index.doctree  introduction.doctree  user_guide.doctree
.doctrees/base_extension/: armbian.doctree  base_extension.doctree  buildroot.doctree  debootstrap.doctree  raspberrypiOS.doctree  uboot.doctree
.doctrees/build_system/: build_system.doctree
.doctrees/rootfs/: linux_usr.doctree  rootfs.doctree
.github/workflows/: documentation.yaml
_sources/: index.rst.txt  user_guide.rst.txt
base_extension/: armbian.html  base_extension.html  buildroot.html  debootstrap.html  raspberrypiOS.html  uboot.html
build_system/: build_system.html
doc/source/: glossary.rst  user_guide.rst
doc/source/build_system/: build_system.rst
filesystem/: init_storage.sh  mount.sh  umount.sh
linux/linux/: Makefile
linux/rootfs/: ..config.tmp  .config  .config.old  .gitignore  Makefile
linux/usr/: CMakeLists.txt
linux/usr/include/core/: core.h  debug.h  injector.h
linux/usr/include/soo/: core.h
linux/usr/src/: CMakeLists.txt
linux/usr/src/graphic/kmscube/: CMakeLists.txt  common.c  cube-smooth.c  kmscube.c
rootfs/: linux_usr.html  rootfs.html
scripts/: build.sh  deploy.sh  init_storage.sh  mount.sh  stvg.sh  umount.sh
(+57 files in other folders)
